--- a/README.adoc
+++ b/README.adoc
@@ -12,7 +12,7 @@ link:./prac/p3.adoc[Práctica 3]
 
 http://bit.do/ungs-db1-intro[Presentación de la materia]
 
-http://bit.do/ungs-db1-db[Dependencias Funcionales]
+http://bit.do/ungs-db1-dp[Dependencias Funcionales]
 
 http://bit.do/ungs-db1-norm[Normalización]
 
