--- a/prac/p1.adoc
+++ b/prac/p1.adoc
@@ -22,15 +22,15 @@ conoce su nombre y su fecha de nacimiento, mientras que de cada sinfonía
 se conoce el nombre de su compositore, el género, la tonalidad, y los
 distintos instrumentos que se utilizan para su ejecución.
 
-. La panadería y confitería "El Churro de Chocolate" está organizando
-el delivery a sus clientes, para ello han dividido la ciudad en zonas.
+. La panadería y confitería "El Churro de Chocolate" está organizando el
+delivery a sus clientes, para ello han dividido la ciudad en zonas.
 Cada zona tiene un nombre que la identifica. Cada cliente pertenece a
 una zona.  Les repartidores tienen asignades clientes, cada cliente
-puede ser atendido por más de une repartidore, ó por ningune. A cada zona
-se le asigna une repartidore como jefe de esa zona. Une repartidore puede
-ser jefe de varias zonas ó de ninguna. De les repartidores se conoce el
-nombre y legajo. De les clientes se conoce el nombre, telefono,
-dirección, y la fecha de la primera compra.
+puede ser atendido por más de une repartidore, ó por ningune. A cada
+zona se le asigna une repartidore como jefe de esa zona. Une repartidore
+puede ser jefe de varias zonas ó de ninguna. De les repartidores se
+conoce el nombre y legajo. De les clientes se conoce el nombre,
+teléfono, dirección, y la fecha de la primera compra.
 
 . Modificar el DER anterior para que se pueda registrar cada vez que se
 realiza una entrega a domicilio, le repartidore que la realizó, la fecha
@@ -39,16 +39,17 @@ y hora de la entrega y el monto pagado por le cliente.
 . Una cadena de restaurantes ha relevado información acerca de les
 clientes y de sus preferencias. De cada persona, identificada por su
 documento de identidad, se conoce su nombre, el restaurante que más
-frecuenta, y las comidas que más le gustan. De cada restaurante, identificado
-por su nombre, se conoce las
-comidas que preparan. De cada comida se conoce el nombre que la
-identifica, el tiempo de preparación, y los ingredientes que lleva y en
-qué cantidades. De los ingredientes se conoce, nombre, proveedore,
-precio,
-y unidad en la que esta expresado el precio.
+frecuenta, y las comidas que más le gustan. De cada restaurante,
+identificado por su nombre, se conoce las comidas que preparan. De cada
+comida se conoce el nombre que la identifica, el tiempo de preparación,
+y los ingredientes que lleva y en qué cantidades. De los ingredientes se
+conoce, nombre, proveedore, precio, y unidad en la que esta expresado el
+precio.
 
-. Modificar el DER anterior considerando los siguentes cambios:
+. Modificar el DER anterior considerando los siguientes cambios:
+
  - Una persona frecuenta varios restaurantes.
+
  - A una persona no le gusta una comida por si sola, sino que le gusta
   como la sirven en determinados restaurantes.
 
@@ -70,9 +71,17 @@ Adicionalmente, se desea llevar un registro de quienes son los padres
 biológicos de cada persona, y eventualmente, de quienes son los padres
 adoptivos.
 
-. La veterinaria "Pet Shop of Horrors" necesita llevar un control informatizado de su gestión. De cada animal—ó paciente—se desea guardar el código, el nombre, el tipo de animal, la raza, y el año de nacimiento. De cada dueñe de cada animal se desea guardar el nombre, apellido, dirección, y teléfono.
+. La veterinaria "Pet Shop of Horrors" necesita llevar un control
+informatizado de su gestión. De cada animal—ó paciente—se desea guardar
+el código, el nombre, el tipo de animal, la raza, y el año de
+nacimiento. De cada dueñe de cada animal se desea guardar el nombre,
+apellido, dirección, y teléfono.
 +
-También, se desea llevar un control de cada una de las veces que se atiende a une animal, registrando la fecha, el diagnostico, el tratamiento, le veterinarie que le atendió, y el costo de la consulta. La veterinaria tiene varies veterinaries, de les cuales se desea registrar, su número de matrícula, fecha de ingreso, nombre y apellido.
+También, se desea llevar un control de cada una de las veces que se
+atiende a une animal, registrando la fecha, el diagnostico, el
+tratamiento, le veterinarie que le atendió, y el costo de la consulta.
+La veterinaria tiene varies veterinaries, de les cuales se desea
+registrar, su número de matrícula, fecha de ingreso, nombre y apellido.
 +
 Une veterinarie puede atender a varies animales, pero una consulta es
 atendida por une únique veterinarie.
@@ -105,7 +114,7 @@ modelar:
    dirección, teléfono.
 
  - *paciente* con los datos: DNI, número de historia clínica, número de
-cama, nombre, dirección, fecha de nacimiento, y sexo.
+   cama, nombre, dirección, fecha de nacimiento, y sexo.
 
  - *diagnóstico* con los datos: código que lo identifica, tipo, y
    complicaciones.
@@ -133,23 +142,22 @@ Además, sabemos que:
 - Cada paciente puede tener varios diagnósticos. Nos interesa saber la
   fecha en que se realizó cada uno.
 
-. Se desea realizar una base de datos geográfica.
-Los países pueden clasificarse en países independientes, y en colonias. Las
-colonias pertenecen a algún país independiente. Estos últimos tienen
-alguna forma de gobierno que puede ser: república, principado, emirato,
-democracia popular, dictadura, etc. Los países independientes comercian
-entre sí distintos productos. Las colonias sólo comercian con el país
+. Se desea realizar una base de datos geográfica. Los países pueden
+clasificarse en países independientes, y en colonias. Las colonias
+pertenecen a algún país independiente. Estos últimos tienen alguna forma
+de gobierno que puede ser: república, principado, emirato, democracia
+popular, dictadura, etc. Los países independientes comercian entre sí
+distintos productos. Las colonias sólo comercian con el país
 colonizador. En ambos casos, del producto comerciado se conoce un código
-que lo identifica, y el nombre. Las relaciones de
-comercio posibles son de importación y de exportación de productos. También
-forma parte de la base de datos la información de los límites entre
-países—i.e. qué países limitan con un país dado.
+que lo identifica, y el nombre. Las relaciones de comercio posibles son
+de importación y de exportación de productos. También forma parte de la
+base de datos la información de los límites entre países—i.e. qué países
+limitan con un país dado.
 
 . Completar el DER del punto anterior, considerando lo siguiente.
 También interesa modelar información relativa a los ríos, los cuales
-pueden
-ser internacionales ó nacionales. Los ríos internacionales sirven de
-límite entre dos países, mientras que los nacionales están totalmente
+pueden ser internacionales ó nacionales. Los ríos internacionales sirven
+de límite entre dos países, mientras que los nacionales están totalmente
 contenidos en un solo país. Los datos que interesan de cada río son su
 nombre, caudal, y longitud. Se supone que pueden existir dos ríos
 nacionales con igual nombre en distinto país. Los ríos internacionales
