Fix case in schema and less parens
e.g.: Estudiante → estudiante

y se pueden `ahorrar' algunos parentesis en los conjuntos de
dependencias funcionales usando espacios, e.g.:

(legajo, nombre) → (legajo),…
legajo nombre → legajo,…

--- a/present/context/df-equivalencia-df-ejemplo.tex
+++ b/present/context/df-equivalencia-df-ejemplo.tex
@@ -1,8 +1,9 @@
+\pdfoutput=1
 \documentclass[preview]{standalone}
 
 \begin{document}
 $R = (A,B,C)$\\
 
-$F = \big\{A\rightarrow B, B\rightarrow C, C\rightarrow A\big\}$\\
-$G = \big\{C\rightarrow B, B\rightarrow A, A\rightarrow C\big\}$
+$F = \big\{A\rightarrow B,\ B\rightarrow C,\ C\rightarrow A\big\}$\\
+$G = \big\{C\rightarrow B,\ B\rightarrow A,\ A\rightarrow C\big\}$
 \end{document}
