--- a/present/context/df-superclaves-claves-ejemplo-2.tex
+++ b/present/context/df-superclaves-claves-ejemplo-2.tex
@@ -1,18 +1,19 @@
+\pdfoutput=1
 \documentclass[preview]{standalone}
 
 \usepackage{amsmath}
 
 \begin{document}
 \textbf{Esquema:}\\
-Estudiante (legajo, nombre)\\
+estudiante(legajo, nombre)\\
 
 \textbf{Conjunto de DF:}\\
 $F$=\{legajo $\rightarrow$ nombre)\\
 
 \textbf{Clausuras:}\\
-$\big\{\text{legajo, nombre}\big\}^+ =\big\{\text{legajo, nombre}\big\}$\\
-$\big\{\text{legajo}\big\}^+ = \big\{\text{legajo, nombre}\big\}$\\
-$\big\{\text{nombre}\big\}^+ = \big\{\text{nombre}\big\}$\\
+$\text{legajo nombre}^+ =\big\{\text{legajo, nombre}\big\}$\\
+$\text{legajo}^+ = \big\{\text{legajo, nombre}\big\}$\\
+$\text{nombre}^+ = \big\{\text{nombre}\big\}$\\
 
 \textbf{Superclaves: } \\
 $\big\{\text{legajo, nombre}\big\}$\\ 
