--- a/present/context/df-superclaves-claves-ejemplo.tex
+++ b/present/context/df-superclaves-claves-ejemplo.tex
@@ -1,18 +1,20 @@
+\pdfoutput=1
 \documentclass[preview]{standalone}
 
 \usepackage{amsmath}
+\usepackage{mathtools}
 
 \begin{document}
 \textbf{Esquema:}\\
-Estudiante (legajo, nombre)\\
+estudiante(legajo, nombre)\\
 
 \textbf{Conjunto de DF:}\\
 $F$=\{legajo $\rightarrow$ nombre)\\
 
 \textbf{Clausuras:}\\
-$\big\{\text{legajo, nombre}\big\}^+ = \big\{\dots$\\
-$\big\{\text{legajo}\big\}^+ = \big\{\dots$\\
-$\big\{\text{nombre}\big\}^+ = \big\{\dots$\\
+$\text{legajo nombre}^+ = \big\{\dots$\\
+$\text{legajo}^+ = \big\{\dots$\\
+$\text{nombre}^+ = \big\{\dots$\\
 
 \textbf{Superclave(s):}\\
 $\dots$\\
