--- a/present/context/df-clausura-atributos-ejemplo.tex
+++ b/present/context/df-clausura-atributos-ejemplo.tex
@@ -1,8 +1,11 @@
+\pdfoutput=1
 \documentclass[preview]{standalone}
+
+\usepackage{mathtools}
 
 \begin{document}
 \textbf{Esquema:}\\
-Cursada (legajo\_est, nom\_est, materia, fecha\_inscripcion, fecha\_examen, nota)\\
+cursada(legajo\_est, nom\_est, materia, fecha\_inscripcion, fecha\_examen, nota)\\
 
 \textbf{Dependencias funcionales:}\\
 legajo\_est $\rightarrow$ nom\_est\\
@@ -10,6 +13,6 @@ legajo\_est, materia $\rightarrow$ fecha\_inscripcion\\
 legajo\_est, materia, fecha\_examen $\rightarrow$ nota\\
 
 \textbf{Clausuras:}\\
-$\big\{$ legajo\_est $\big\}^+ = \big\{\dots$\\
-$\big\{$ legajo\_est, materia $\big\}^+ = \big\{\dots$
+$\text{legajo\_est}^+ = \big\{\dots$\\
+$\text{legajo\_est materia}^+ = \big\{\dots$
 \end{document}
