--- a/present/context/df-clausura-df-ejemplo.tex
+++ b/present/context/df-clausura-df-ejemplo.tex
@@ -1,7 +1,8 @@
+\pdfoutput=1
 \documentclass[preview]{standalone}
 
 \begin{document}
-Estudiante (legajo, nombre)\\
+estudiante(legajo, nombre)\\
 $F$=\{legajo $\rightarrow$ nombre)\\
 
 \textbf{?`Qu\'e conjunto es $F^+$?}\\
