--- a/present/context/df-definicion-ejemplo.tex
+++ b/present/context/df-definicion-ejemplo.tex
@@ -1,10 +1,11 @@
+\pdfoutput=1
 \documentclass[preview]{standalone}
 
 \usepackage{amssymb}
 
 \begin{document}
 \textbf{Esquema:}\\
-Cursada (legajo\_est, nom\_est, materia, fecha\_inscripcion, fecha\_examen, nota)\\
+cursada(legajo\_est, nom\_est, materia, fecha\_inscripcion, fecha\_examen, nota)\\
 
 \textbf{Dependencias funcionales:}\\
 legajo\_est $\rightarrow$ nom\_est\\
