--- a/present/context/df-regla-falsa-contraejemplo.tex
+++ b/present/context/df-regla-falsa-contraejemplo.tex
@@ -1,8 +1,9 @@
+\pdfoutput=1
 \documentclass[preview]{standalone}
 
 \begin{document}
 \textbf{Esquema:}\\
-Cliente (nro\_cliente, telefono, nombre)\\
+cliente(nro\_cliente, telefono, nombre)\\
 
 \textbf{Dependencias funcionales:}\\
 nro\_cliente $\rightarrow$ nombre\\
