--- a/present/tex/df-clausura-atributos-ejemplo-2.tex
+++ b/present/tex/df-clausura-atributos-ejemplo-2.tex
@@ -13,6 +13,6 @@ legajo\_est, materia $\rightarrow$ fecha\_inscripcion\\
 legajo\_est, materia, fecha\_examen $\rightarrow$ nota\\
 
 \textbf{Clausuras:}\\
-$\text{legajo\_est}^+ = \big\{$legajo\_es, nom\_est$\big\}$\\
-$\text{legajo\_est materia}^+ = \big\{$legajo\_es, materia, nom\_est, fecha\_inscripcion$\big\}$\\
+$\big\{\text{legajo\_est}\big\}^+ = \big\{$legajo\_es, nom\_est$\big\}$\\
+$\big\{\text{legajo\_est, materia}\big\}^+ = \big\{$legajo\_es, materia, nom\_est, fecha\_inscripcion$\big\}$\\
 \end{document}
