--- a/present/tex/df-clausura-atributos-ejemplo.tex
+++ b/present/tex/df-clausura-atributos-ejemplo.tex
@@ -13,6 +13,6 @@ legajo\_est, materia $\rightarrow$ fecha\_inscripcion\\
 legajo\_est, materia, fecha\_examen $\rightarrow$ nota\\
 
 \textbf{Clausuras:}\\
-$\text{legajo\_est}^+ = \big\{\dots$\\
-$\text{legajo\_est materia}^+ = \big\{\dots$
+$\big\{\text{legajo\_est}\big\}^+ = \big\{\dots$\\
+$\big\{\text{legajo\_est, materia}\big\}^+ = \big\{\dots$
 \end{document}
