--- a/present/tex/df-clausura-df-ejemplo-2.tex
+++ b/present/tex/df-clausura-df-ejemplo-2.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 estudiante(legajo, nombre)\\
-$F$=\{legajo $\rightarrow$ nombre)\\
+$F$=\{legajo $\rightarrow$ nombre\}\\
 
 \textbf{?`Qu\'e conjunto es $F^+$?}\\
 \begin{align*}
