--- a/present/tex/df-regla-falsa-contraejemplo-2.tex
+++ b/present/tex/df-regla-falsa-contraejemplo-2.tex
@@ -1,14 +1,16 @@
+\pdfoutput=1
 \documentclass[preview]{standalone}
 
 \begin{document}
 \textbf{Esquema:}\\
-R (A, B, C)\\
+R(A, B, C)\\
 
 \textbf{Dependencias funcionales:}\\
 A $\rightarrow$ C\\
 B $\rightarrow$ C\\
 
 \textbf{Instancia:}\\
+\begin{center}
 \begin{tabular}{ | c | c | c |}
   \hline			
   A & B & C \\
@@ -19,4 +21,5 @@ B $\rightarrow$ C\\
   2 & 4 & 5 \\
   \hline  
 \end{tabular}
+\end{center}
 \end{document}
