--- a/present/tex/df-superclaves-claves-ejemplo-2.tex
+++ b/present/tex/df-superclaves-claves-ejemplo-2.tex
@@ -8,12 +8,12 @@
 estudiante(legajo, nombre)\\
 
 \textbf{Conjunto de DF:}\\
-$F$=\{legajo $\rightarrow$ nombre)\\
+$F$=\{legajo $\rightarrow$ nombre\}\\
 
 \textbf{Clausuras:}\\
-$\text{legajo nombre}^+ =\big\{\text{legajo, nombre}\big\}$\\
-$\text{legajo}^+ = \big\{\text{legajo, nombre}\big\}$\\
-$\text{nombre}^+ = \big\{\text{nombre}\big\}$\\
+$\{\text{legajo, nombre}\}^+ =\big\{\text{legajo, nombre}\big\}$\\
+$\{\text{legajo}\}^+ = \big\{\text{legajo, nombre}\big\}$\\
+$\{\text{nombre}\}^+ = \big\{\text{nombre}\big\}$\\
 
 \textbf{Superclaves: } \\
 $\big\{\text{legajo, nombre}\big\}$\\ 
