--- a/present/tex/df-superclaves-claves-ejemplo.tex
+++ b/present/tex/df-superclaves-claves-ejemplo.tex
@@ -9,12 +9,12 @@
 estudiante(legajo, nombre)\\
 
 \textbf{Conjunto de DF:}\\
-$F$=\{legajo $\rightarrow$ nombre)\\
+$F$=\{legajo $\rightarrow$ nombre\}\\
 
 \textbf{Clausuras:}\\
-$\text{legajo nombre}^+ = \big\{\dots$\\
-$\text{legajo}^+ = \big\{\dots$\\
-$\text{nombre}^+ = \big\{\dots$\\
+$\{\text{legajo, nombre}\}^+ = \big\{\dots$\\
+$\{\text{legajo}\}^+ = \big\{\dots$\\
+$\{\text{nombre}\}^+ = \big\{\dots$\\
 
 \textbf{Superclave(s):}\\
 $\dots$\\
