--- a/present/tex/df-clausura-df-ejemplo.tex
+++ b/present/tex/df-clausura-df-ejemplo.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 estudiante(legajo, nombre)\\
-$F$=\{legajo $\rightarrow$ nombre)\\
+$F$=\{legajo $\rightarrow$ nombre\}\\
 
 \textbf{?`Qu\'e conjunto es $F^+$?}\\
 
