--- a/present/tex/df-superclaves-claves.tex
+++ b/present/tex/df-superclaves-claves.tex
@@ -1,3 +1,4 @@
+\pdfoutput=1
 \documentclass[preview]{standalone}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -6,7 +7,7 @@
 \begin{itemize}
 \item $X\rightarrow R \Longrightarrow X \text{ es superclave de } R$
 \item $X^+ = R \Longrightarrow X \text{ es superclave de } R$
-\item $\nexists \text{ } Y \subset X \text{ tal que } Y\rightarrow R \Longrightarrow X \text{ es clave de } R$
+\item $\nexists \text{ } Y \subset X \text{ tal que } X\rightarrow R \Longrightarrow X \text{ es clave de } R$
 \end{itemize}
 $R$ puede tener una o varias claves, a las que llamamos \textit{claves candidatas}.
 \end{document}
