--- a/present/tex/df-clausura-df-ejemplo-2.tex
+++ b/present/tex/df-clausura-df-ejemplo-2.tex
@@ -9,8 +9,8 @@ $F$=\{legajo $\rightarrow$ nombre\}\\
 
 \textbf{?`Qu\'e conjunto es $F^+$?}\\
 \begin{align*}
-	F^+ = \big\{ & \text{legajo} \rightarrow \text{nombre},\ \text{legajo} \rightarrow \text{legajo},\ \text{nombre} \rightarrow \text{nombre},\\
- & \text{legajo nombre} \rightarrow \text{legajo},\ \text{legajo nombre} \rightarrow \text{nombre},\\  
- & \text{legajo} \rightarrow \text{nombre legajo}\big\}   
+	F^+ = \big\{ & \text{legajo} \rightarrow \text{nombre},\ \text{legajo} \rightarrow \text{legajo},\ \text{legajo} \rightarrow \text{nombre legajo},\\
+ & \text{nombre} \rightarrow \text{nombre}, \ \text{legajo nombre} \rightarrow \text{legajo},\\  
+ & \text{legajo nombre} \rightarrow \text{nombre}, \ \text{legajo nombre} \rightarrow \text{legajo nombre} \big\}   
 \end{align*}
 \end{document}
