--- a/present/tex/df-axiomas-armstrong.tex
+++ b/present/tex/df-axiomas-armstrong.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \begin{align*}
-(1) & \quad  Y  \subseteq X  \Rightarrow X\rightarrow Y  &\quad\quad  \text{(reflexibidad)}\\
+(1) & \quad  Y  \subseteq X  \Rightarrow X\rightarrow Y  &\quad\quad  \text{(reflexividad)}\\
 (2) & \quad  X\rightarrow Y    \Rightarrow XZ\rightarrow YZ  &\quad\quad  \text{(aumento)}\\
 (3) & \quad  X\rightarrow Y\text{, }  Y\rightarrow Z   \Rightarrow X\rightarrow Z  &\quad\quad  \text{(transitividad)}\\
 \end{align*}
