--- a/present/tex/df-notacion.tex
+++ b/present/tex/df-notacion.tex
@@ -1,12 +1,13 @@
+\pdfoutput=1
 \documentclass[preview]{standalone}
 
-\begin{document}
+\begin{document}\flushleft
 \begin{itemize}
-\item $R$: esquema de relaci\'on
+\item $R$: esquema de relación
 \item $r$: instancia de $R$
-\item $A, B, C, ...$: atributos de $R$
-\item $t_1, t_2, t_3, ...$: tuplas de una instancia $r$ 
-\item $X, Y, Z$: conjuntos de atributos de $R$
+\item $A,\ B,\ C,\ \ldots\ $: atributos de $R$
+\item $t_1,\ t_2,\ t_3,\ \ldots\ $: tuplas de una instancia $r$ 
+\item $X,\ Y,\ Z$: conjuntos de atributos de $R$
 \item $f$: dependencia funcional
 \item $F$: conjunto de dependencias funcionales
 \end{itemize}
