Add Boyce-Codd example; Fix ar tex

--- a/present/tex/ar-division-example.tex
+++ b/present/tex/ar-division-example.tex
@@ -3,12 +3,12 @@
 
 \begin{document}
 
-materia\_aprobada(\underline{estudiante}, \underline{materia})\\
-materia(\underline{nombre})
+materia\_aprobada(\underline{estudiante}, \underline{nom\_materia})\\
+materia(\underline{nom\_materia})
 
 \begin{center}
 \begin{tabular}{ | l | l |}\hline
-	estudiante & materia \\\hline			
+	estudiante & nom\_materia \\\hline			
 	Guido de Caso & BD I  \\
 	Guido de Caso & Redes  \\
 	Sergio Mera & Prog I  \\
@@ -20,7 +20,7 @@ materia(\underline{nombre})
 \end{tabular}
 \quad
 \begin{tabular}{| l |}\hline
-	nombre \\\hline			
+	nom\_materia \\\hline			
 	BD I \\
 	Prog I \\
 	Redes \\\hline
