--- a/present/tex/ar-join-example.tex
+++ b/present/tex/ar-join-example.tex
@@ -21,7 +21,7 @@ cursada(\underline{nro\_legajo}, nom\_est, \underline{cod\_materia})\\
 \end{tabular}
 \vspace{.35cm}
 
-$\Big\Downarrow$ materia ${\Large\bowtie_{\textsubscript{(cod\_mat = cod\_materia)}}}$ \ estudiante 
+$\Big\Downarrow$ materia ${\Large\bowtie_{\textsubscript{(cod\_mat = cod\_materia)}}}$ \ cursada 
 \vspace{.35cm}
 
 \begin{tabular}{| l | c | l | l | l | l | }\hline			
