--- a/present/tex/ar-natural-join-example.tex
+++ b/present/tex/ar-natural-join-example.tex
@@ -21,7 +21,7 @@ cursada(\underline{nro\_legajo}, nom\_est, \underline{\textbf{cod\_mat}})\\
 \end{tabular}
 \vspace{.35cm}
 
-$\Big\Downarrow$ materia ${\Large\bowtie}$ \ estudiante 
+$\Big\Downarrow$ materia ${\Large\bowtie}$ \ cursada 
 \vspace{.35cm}
 
 \begin{tabular}{| l | c | l | l | l | l }\hline			
