--- a/present/com-1/tex/dp-definicion.tex
+++ b/present/com-1/tex/dp-definicion.tex
@@ -2,6 +2,6 @@
 \documentclass[preview]{standalone}
 
 \begin{document}
-$X \rightarrow Y$ es DF de $R \iff (\forall r)$ $t_{1}(X) = t_{2}(X)  \Rightarrow t_{1}(Y) = t_{2}(Y)$
+\textsf{$X \rightarrow Y$ es DF de $R \iff (\forall r)$ $t_{1}(X) = t_{2}(X)  \Rightarrow t_{1}(Y) = t_{2}(Y)$}
 \end{document}
 
