--- a/present/com-2/tex/fn-bcfn-ejemplo-2.tex
+++ b/present/com-2/tex/fn-bcfn-ejemplo-2.tex
@@ -30,7 +30,7 @@ sector, nro\_emp $\rightarrow$ nro\_legajo, cargo\\
 $\Big\Downarrow$
 \end{center}
 
-\textbf{Esquema:}\\
+\textbf{Esquemas:}\\
 empleade(\underline{nro\_legajo}, nro\_emp, cargo)\\
 cargo(\underline{nombre}, sector)\\
 
