--- a/present/com-2/tex/fn-tfn-ejemplo.tex
+++ b/present/com-2/tex/fn-tfn-ejemplo.tex
@@ -29,7 +29,7 @@ tenista $\rightarrow$ nacionalidad\\
 $\Big\Downarrow$
 \end{center}
 
-\textbf{Esquema:}\\
+\textbf{Esquemas:}\\
 campeon\_grand\_slam(\underline{torneo}, \underline{a\~no}, tenista)\\
 tenista(\underline{nombre}, nacionalidad)
 
