--- a/present/com-2/tex/fn-sfn-atributos-primos.tex
+++ b/present/com-2/tex/fn-sfn-atributos-primos.tex
@@ -9,6 +9,6 @@ Dados {\em (i)} una relaci\'on $R$, {\em (ii)} un atributo $A\in R$ y {\em (iii)
 \begin{itemize}
 \item $A$ es \textbf{primo} $\Leftrightarrow A$ forma parte de alguna {\em clave candidata} de $R$
 \item $X \rightarrow Y\in F$ es \textbf{dependencia parcial} $\Leftrightarrow \exists \ Z \subset X$ tal que $F \models Z\rightarrow Y$
-\item $Z$ \textbf{depende parcialmente} de $X \Leftrightarrow X \rightarrow Z$ es una dependencia parcial
+\item $Y$ \textbf{depende parcialmente} de $X \Leftrightarrow X \rightarrow Y$ es una dependencia parcial
 \end{itemize}
 \end{document}
