--- a/present/com-1/tex/ar-union-example.tex
+++ b/present/com-1/tex/ar-union-example.tex
@@ -1,37 +1,33 @@
-\pdfoutput=1
-\documentclass[preview]{standalone}
+%\setupbodyfont[pagella,11pt]
+%\setupbodyfont[sansserif,11pt]
+\setupbodyfont[computer-modern-unicode,11pt]
+%\setupbodyfont[modernvariable,11pt]
 
-\begin{document}
+%\usemodule[tikz]
+%\usetikzlibrary[calc]
+\usecolors[x11]
 
-investigador\_docente\_ici(\underline{legajo}, nombre)\\
-investigador\_docente\_idei(\underline{legajo}, nombre)
+\setupwhitespace[big]
+%\setupwhitespace[medium]
 
-\begin{center}
-\begin{tabular}{| l | l | }\hline			
-	legajo & nombre \\\hline			
-	101 & V\'ictor Braberman \\
-	312 & Esteban Pavese \\\hline
-\end{tabular}
-\quad
-\begin{tabular}{| l | l | }\hline			
-	legajo & nombre \\\hline			
-	165 & Juan P\'erez \\
-	123 & Carlos Kaminker \\
-	572 & Mariana Na\'on \\\hline
-\end{tabular}
-\vspace{.35cm}
+%\setuppagenumbering[style=\small,location=foot]
+\setuppagenumbering[state=stop]
 
-$\Big\Downarrow$ investigador\_docente\_ici ${\Large\cup}$ investigador\_docente\_idei 
-\vspace{.35cm}
+\setupitemize[packed]
 
-\begin{tabular}{| l | l | }\hline			
-	legajo & nombre \\\hline			
-	101 & V\'ictor Braberman \\
-	312 & Esteban Pavese \\
-	165 & Juan P\'erez \\
-	123 & Carlos Kaminker \\
-	572 & Mariana Na\'on \\\hline
-\end{tabular}
-\end{center}
+%\hyphenation{co-rrec-ta-men-te}
+\language[es]
 
-\end{document}
+\starttext
+
+%\showframe
+%\showlayout
+%\showsetups
+%\showcolor[x11]
+%\showbodyfont[cmr]
+
+\startformula
+	\text{docente}\ \cup\ \text{alumne}
+\stopformula
+
+\stoptext
