--- a/present/com-1/tex/ar-natural-join-example.tex
+++ b/present/com-1/tex/ar-natural-join-example.tex
@@ -1,35 +1,33 @@
-\pdfoutput=1
-\documentclass[preview]{standalone}
+%\setupbodyfont[pagella,11pt]
+%\setupbodyfont[sansserif,11pt]
+\setupbodyfont[computer-modern-unicode,11pt]
+%\setupbodyfont[modernvariable,11pt]
 
-\begin{document}
+%\usemodule[tikz]
+%\usetikzlibrary[calc]
+\usecolors[x11]
 
-materia(\underline{\textbf{cod\_mat}}, nom\_mat)\\
-cursada(\underline{nro\_legajo}, nom\_est, \underline{\textbf{cod\_mat}})\\
+\setupwhitespace[big]
+%\setupwhitespace[medium]
 
-\begin{center}
-\begin{tabular}{| l | l | }\hline			
-	\textbf{cod\_mat} & nom\_mat \\\hline			
-	001 & Programacion I \\
-	002 & Base de datos I \\\hline
-\end{tabular}
-\quad
-\begin{tabular}{| l | l | l | }\hline			
-	nro\_legajo & nom\_est & \textbf{cod\_mat} \\\hline			
-	1 & Juan P\'erez & 001\\
-	1 & Juan P\'erez & 002\\
-	2 & Mariana Na\'on & 002 \\\hline
-\end{tabular}
-\vspace{.35cm}
+%\setuppagenumbering[style=\small,location=foot]
+\setuppagenumbering[state=stop]
 
-$\Big\Downarrow$ materia ${\Large\bowtie}$ \ cursada 
-\vspace{.35cm}
+\setupitemize[packed]
 
-\begin{tabular}{| l | c | l | l | l | l }\hline			
-	\textbf{cod\_mat} & nom\_mat & nro\_legajo & nom\_est \\\hline			
-	001 & Programacion I & 1 & Juan P\'erez  \\
-	002 & Base de datos I & 1 & Juan P\'erez \\
-	002 & Base de datos I & 2 & Mariana Na\'on \\\hline
-\end{tabular}
-\end{center}
+%\hyphenation{co-rrec-ta-men-te}
+\language[es]
 
-\end{document}
+\starttext
+
+%\showframe
+%\showlayout
+%\showsetups
+%\showcolor[x11]
+%\showbodyfont[cmr]
+
+\startformula
+	\text{materia} \Join \text{cursa}
+\stopformula
+
+\stoptext
