Fix com-1 ar selection example

--- a/present/com-1/tex/ar-selection-example.tex
+++ b/present/com-1/tex/ar-selection-example.tex
@@ -27,7 +27,7 @@
 %\showbodyfont[cmr]
 
 \startformula
-	\sigma_{(\text{legajo}\ \geq\ 629\ \lor\ \text{apellido}\ =\ \text{'Cristina'})}\ \text{alumne}
+	\sigma_{(\text{legajo}\ \geq\ 629\ \lor\ \text{nombre}\ =\ \text{'Cristina'})}\ \text{alumne}
 \stopformula
 
 \stoptext
